# th07-vulkan

./: .gitignore  AGENT.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  package.json
.github/workflows/: ci.yml
config/: README.md  ecl_high_opcode_cases.csv  ecl_opcode_dispatch.csv  ecl_opcode_gaps.csv  player_function_manifest.csv  runtime_replacement_manifest.csv  subsystems.csv
docs/: MODULES.md  PROJECT_STRUCTURE.md  TH07_CPP_RECONSTRUCTION.md  TH07_DIFF_FROM_TH06.md  TH07_RECONSTRUCTION_STATUS.md
reference/: README.md
resources/: README.md
scripts/: audit-ecl-opcodes.mjs  audit-th07-cpp.mjs  audit-th07-resources.mjs  audit-th07-vs-th06.mjs  export-th07-anchor-xrefs.mjs  export-th07-decomp.mjs  export-th07-ghidra.mjs  extract-th07-resources.mjs  import-th06-baseline.mjs  objdiff-player.mjs
scripts/ghidra/: ExportTh07AnchorXrefs.java  ExportTh07FullDecomp.java  ExportTh07Metadata.java
src/: AnmManager.cpp  AnmManager.hpp  AsciiManager.cpp  AsciiManager.hpp  BombData.cpp  BombData.hpp  BorderSystem.cpp  BorderSystem.hpp  BulletData.hpp  BulletManager.cpp  BulletManager.hpp  CMyFont.cpp  CherrySystem.cpp  CherrySystem.hpp  ClearBonusSystem.cpp  ClearBonusSystem.hpp  Controller.hpp  EclManager.cpp  EclManager.hpp  EclOpcodeTables.cpp  EclOpcodeTables.hpp  Effect.hpp  EffectManager.cpp  EffectManager.hpp  Enemy.hpp  EnemyEclInstr.cpp  EnemyEclInstr.hpp  EnemyManager.hpp  FileSystem.cpp  GameErrorContext.hpp  GameWindow.hpp  Gui.cpp  Gui.hpp  GuiLayout.hpp  ItemManager.cpp  MainMenu.cpp  MidiOutput.cpp  MusicRoom.cpp  Player.cpp  Player.hpp  (+64 more)
src/app/: main.cpp
src/compat/: Windows.h  d3d8.h  d3d8types.h  d3dx8math.h  dinput.h  dsound.h  i18n.hpp  mmreg.h  mmsystem.h
src/game/: Th07Constants.cpp  Th07Constants.hpp  Th07ResourceManifest.cpp  Th07ResourceManifest.hpp
src/pbg3/: FileAbstraction.cpp  FileAbstraction.hpp  IPbg3Parser.cpp  IPbg3Parser.hpp  Pbg3Parser.cpp
src/reconstruction/: PROVENANCE.md  SubsystemNotes.hpp
src/reconstruction/original-engine/: AnmIdx.hpp  AnmManager.cpp  AnmManager.hpp  AnmVm.hpp  BombData.cpp  BorderSystem.hpp  BulletData.cpp  CMyFont.hpp  Chain.cpp  Chain.hpp  CherrySystem.hpp  Controller.cpp  Effect.hpp  EffectManager.cpp  EffectManager.hpp  Ending.cpp  Ending.hpp  EnemyManager.cpp  FileSystem.cpp  FileSystem.hpp  GameErrorContext.cpp  GameManager.cpp  GameManager.hpp  GameWindow.cpp  Gui.hpp  ItemManager.hpp  MainMenu.hpp  MidiOutput.hpp  MusicRoom.hpp  Player.cpp  Player.hpp  ReplayManager.hpp  Rng.cpp  ScreenEffect.cpp  ShtManager.cpp  ShtManager.hpp  SoundPlayer.cpp  SoundPlayer.hpp  Stage.cpp  Stage.hpp  (+6 more)
src/reconstruction/original-engine/pbg3/: Pbg3Archive.cpp  Pbg3Archive.hpp  Pbg3Parser.hpp
tests/: test_anm_manager_load_contract.cpp  test_anm_parser.cpp  test_cherry_border.cpp  test_clear_bonus.cpp  test_ecl_manager_contract.cpp  test_ecl_opcode_tables.cpp  test_ecl_parser.cpp  test_file_system_contract.cpp  test_gui_layout.cpp  test_gui_msg_loader_contract.cpp  test_msg_parser.cpp  test_player_layout.cpp  test_reference_paths.cpp  test_resource_format_tables.cpp  test_rng.cpp  test_score_tables.cpp  test_sht_parser.cpp  test_stage_loader_contract.cpp  test_std_parser.cpp  test_timer.cpp
